<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ContactConfig">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:padding="15dp"
            android:src="@mipmap/icon_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/contact_user"
            android:textColor="@color/light_green"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/light_green" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="@drawable/shape_info_frame"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_head"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:src="@mipmap/icon_head2" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_toEndOf="@id/iv_head"
                android:layout_toRightOf="@id/iv_head"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/iv_more"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:src="@mipmap/icon_more" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_change"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#D9E0E4"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_del"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@mipmap/btn_red"
                android:gravity="center"
                android:text="@string/delTheContact"
                android:textColor="@color/baise"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_toLeftOf="@id/tv_del"
                android:layout_toStartOf="@id/tv_del"
                android:gravity="center"
                android:text="@string/edit_contact"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#D9E0E4" />

        <LinearLayout
            android:id="@+id/ll_num"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginStart="70dp"
                android:text="@string/getPhone"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginStart="70dp"
                android:singleLine="true"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#D9E0E4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginStart="70dp"
                android:text="@string/getEmail"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginStart="70dp"
                android:singleLine="true"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#D9E0E4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginStart="70dp"
                android:text="@string/getAddress"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginStart="70dp"
                android:singleLine="true"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
